# localrag

./: .gitignore  README.md  pyproject.toml  setup.py
localrag/: chatstore.py  cli.py  config.py  vectorstore.py
src/localrag/: __init__.py  cli.py  config.py  llm.py  models.py  utils.py  vectorstore.py
