[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localrag"
version = "0.1.0"
description = "A local RAG (Retrieval-Augmented Generation) interface with conversation memory"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Immanuel Peter"}
]
urls = {homepage = "https://github.com/immanuel-peter/localrag"}

dependencies = [
  "click>=8.0.0",
  "openai>=1.0.0",
  "anthropic>=0.5.0",
  "faiss-cpu>=1.7.0",
  "sentence-transformers>=2.2.0",
  "rich>=12.0.0",
  "requests>=2.28.0",
  "numpy>=1.20.0"
]

[project.scripts]
localrag = "localrag.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
